--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -31,16 +31,13 @@
         var milliseconds = today.getMilliseconds();
         var makeMerchantUid = hours +  minutes + seconds + milliseconds;
 
-<<<<<<< HEAD
-=======
 
 
 
 
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
         function requestPay() {
 
-            var loggedIn
+            var loggedIn = true;
 
             if (!loggedIn) {
                 alert("로그인 후 결제가 가능합니다.");
@@ -70,12 +67,9 @@
 
             }
         }
-<<<<<<< HEAD
-=======
 
 
 
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
     </script>
 
     <script th:inline="javascript">
@@ -180,119 +174,6 @@
                 }
             });
 
-<<<<<<< HEAD
-            $(document).ready(function() {
-                $('#ajaxButton').click(function() {
-                    order_pay();
-                });
-
-
-
-            });
-
-        }
-
-        $(document).ready(function () {
-            /* 페이지 로딩 시 실행되는 코드 */
-            var initialHeartValue = /*[[${item.heart}]]*/ 0; // 초기 heart 값 가져오기
-            setHeartImage(initialHeartValue); // 초기 이미지 설정
-
-        });
-
-        function setHeartImage(heartValue) {
-            var likeImg = $("#likeButton img");
-            if (heartValue === 1) {
-                likeImg.attr("src", "/banner/like.svg");
-            } else {
-                likeImg.attr("src", "/banner/like empty.svg");
-            }
-        }
-
-        function likeButton(){
-
-
-            if($("#likeButton").data("toggle") == 0){
-                $("#likeButton").data("toggle", 1);
-
-            }else if($("#likeButton").data("toggle") == 1) {
-                $("#likeButton").data("toggle", 0);
-            }
-            console.log($("#likeButton").data("toggle"));
-
-            $.ajax({
-                url: "/like",
-                type: "GET",
-                contentType: "TEXT",
-                data: {
-                    itemId: "[[${item.id}]]",
-                    heart: $("#likeButton").data("toggle")
-
-                },
-                success: function (result, status) {
-
-                    if(result == 0){
-                        alert("게시물 추천을 취소하였습니다.");
-                        $(".heartButton").attr("src","/banner/like empty.svg")
-                    }else if(result == 1){
-                        alert("게시물을 추천하였습니다.");
-                        $(".heartButton").attr("src","/banner/like.svg")
-
-                    }
-                },
-                error: function (jqXHR, status, error) {
-
-                    if (jqXHR.status == '401') {
-                        alert('로그인 후 이용해주세요');
-                        location.href = '/members/login';
-                    } else {
-                        // alert(jqXHR.responseText);
-                    }
-
-                }
-            });
-        }
-
-        function addCart() {
-            var token = $("meta[name='_csrf']").attr("content");
-            var header = $("meta[name='_csrf_header']").attr("content");
-
-            var url = "/cart";
-            var paramData = {
-                itemId: $("#itemId").val(),
-                count: $("#count").val()
-            };
-
-            var param = JSON.stringify(paramData);
-
-            $.ajax({
-                url: url,
-                type: "POST",
-                contentType: "application/json",
-                data: param,
-                beforeSend: function (xhr) {
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                    xhr.setRequestHeader(header, token);
-                },
-                dataType: "json",
-                cache: false,
-                success: function (result, status) {
-                    alert("상품을 장바구니에 담았습니다.");
-                    location.href = '/index';
-                },
-                error: function (jqXHR, status, error) {
-
-                    if (jqXHR.status == '401') {
-                        alert('로그인 후 이용해주세요');
-                        location.href = '/members/login';
-                    } else {
-                        alert(jqXHR.responseText);
-                    }
-
-                }
-            });
-
-=======
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
         }
 
     </script>
@@ -323,11 +204,7 @@
 
 <div layout:fragment="content">
 
-
-
     <input type="hidden" id="itemId" th:value="${item.id}">
-
-
     <div class="products">
         <div class="container">
             <div class="single-page">
@@ -339,11 +216,7 @@
                             </ul>
                         </div>
                     </div>
-<<<<<<< HEAD
-                    <div class="col-md-6 single-top-right">
-=======
                     <div class="col-md-6 single-top-right" >
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
                         <h3 class="item_name"> <div th:text="${item.itemNm}"></div></h3>
                         <div class="single-rating">
                             <ul>
@@ -365,12 +238,6 @@
 
                         <p class="single-price-text" th:text="${item.itemDetail}"></p>
 
-<<<<<<< HEAD
-                            <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
-<!--                            <input type="hidden" name="cmd" value="_cart" />-->
-<!--                            <input type="hidden" name="add" value="1" />-->
-                            <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
-=======
                         <!--                        <form action="#" method="post">-->
                         <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
                         <input type="hidden" name="cmd" value="_cart" />
@@ -380,7 +247,6 @@
                         <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
                         <!--                        </form>-->
 
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
 
                         <button class="w3ls-cart w3ls-cart-like" onclick="requestPay()">
                             <i class="fa fa-heart-o" aria-hidden="true"></i>
@@ -417,27 +283,6 @@
                                 </a>
                             </h4>
                             <button id="likeButton" th:attr="data-toggle=${item.heart}"  onclick="likeButton()">
-<<<<<<< HEAD
-                                <img class="heartButton" style="width: 100%; height: 50px;">
-                                <i id="likeIcon" class="fa fa-heart-o" aria-hidden="true" ></i>
-                            </button>
-                            좋아요<span th:text="${item.heart}"></span>
-                            조회수<span th:text="${item.view +1}"></span>
-                        </div>
-
-                        <div id="collapseTwo" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingTwo">
-                            <div class="panel-body">
-                                태그
-                                <div>
-                                    <a>
-                                        <span th:text="${item.hashtag}"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default" style="margin: 5px 0;">
-=======
                                 <img class="heartButton " >
                                 <i id="likeIcon" class="fa fa-heart-o" aria-hidden="true" >좋아요</i>
                             </button>
@@ -480,7 +325,6 @@
                         </div>
                     </div>
                     <div class="panel panel-default">
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
                         <div class="panel-heading" role="tab" id="headingFour">
                             <h4 class="panel-title">
                                 <a class="collapsed pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -488,14 +332,11 @@
                                 </a>
                             </h4>
                         </div>
-<<<<<<< HEAD
-=======
                         <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                             <div class="panel-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
                         </div>
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
                     </div>
                 </div>
             </div>
@@ -503,10 +344,5 @@
         </div>
     </div>
 </div>
-<<<<<<< HEAD
-=======
-</div>
-</body>
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3
 
 </html>
