--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -18,31 +18,31 @@
 
             var url = "/order/" + orderId + "/cancel";
             var paramData = {
-                orderId : orderId,
+                orderId: orderId,
             };
 
             var param = JSON.stringify(paramData);
 
             $.ajax({
-                url      : url,
-                type     : "POST",
-                contentType : "application/json",
-                data     : param,
-                beforeSend : function(xhr){
+                url: url,
+                type: "POST",
+                contentType: "application/json",
+                data: param,
+                beforeSend: function (xhr) {
                     /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
                     xhr.setRequestHeader(header, token);
                 },
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
+                dataType: "json",
+                cache: false,
+                success: function (result, status) {
                     alert("주문이 취소 되었습니다.");
-                    location.href='/orders/' + [[${page}]];
+                    location.href = '/orders/' + [[${page}]];
                 },
-                error : function(jqXHR, status, error){
-                    if(jqXHR.status == '401'){
+                error: function (jqXHR, status, error) {
+                    if (jqXHR.status == '401') {
                         alert('로그인 후 이용해주세요');
-                        location.href='/members/login';
-                    } else{
+                        location.href = '/members/login';
+                    } else {
                         alert(jqXHR.responseText);
                     }
                 }
@@ -55,32 +55,37 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
-        .content-mg{
-            margin-left:30%;
-            margin-right:30%;
-            margin-top:2%;
-            margin-bottom:100px;
+        .content-mg {
+            margin-left: 30%;
+            margin-right: 30%;
+            margin-top: 2%;
+            margin-bottom: 100px;
         }
-        .repImgDiv{
-            margin-right:15px;
-            margin-left:15px;
-            height:auto;
+
+        .repImgDiv {
+            margin-right: 15px;
+            margin-left: 15px;
+            height: auto;
         }
-        .repImg{
-            height:100px;
-            width:100px;
+
+        .repImg {
+            height: 100px;
+            width: 100px;
         }
-        .card{
+
+        .card {
             /*width:750px;*/
-            height:100%;
-            padding:14px;
-            margin-bottom:20px;
+            height: 100%;
+            padding: 14px;
+            margin-bottom: 20px;
         }
-        .fs18{
-            font-size:18px
+
+        .fs18 {
+            font-size: 18px
         }
-        .fs24{
-            font-size:24px
+
+        .fs24 {
+            font-size: 24px
         }
 
         /* 체크박스 컨테이너 스타일 */
@@ -114,25 +119,21 @@
     </h2>
 
     <div th:each="order : ${orders.getContent()}">
-<<<<<<< HEAD:src/main/resources/templates/order/orderList.html
-=======
-
         <div class="d-flex mb-3 align-self-center">
             <h3 th:text="${order.orderDate} + ' 주문'"></h3>
-<!--            <div class="ml-3">-->
-<!--                <th:block th:if="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">-->
-<!--                    <button type="button" class="btn btn-danger" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>-->
-<!--                </th:block>-->
-<!--                <th:block th:unless="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">-->
-<!--                    <h3>(취소 완료)</h3>-->
-<!--                </th:block>-->
-<!--            </div>-->
+            <!--            <div class="ml-3">-->
+            <!--                <th:block th:if="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">-->
+            <!--                    <button type="button" class="btn btn-danger" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>-->
+            <!--                </th:block>-->
+            <!--                <th:block th:unless="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">-->
+            <!--                    <h3>(취소 완료)</h3>-->
+            <!--                </th:block>-->
+            <!--            </div>-->
         </div>
->>>>>>> 8c2d8aadd5e751c34c54b0323a7f0f1909f21fd3:src/main/resources/templates/order/orderHist.html
         <div class="card d-flex">
             <div th:each="orderItem : ${order.orderItemDtoList}" class="d-flex mb-3">
                 <div class="repImgDiv">
-                    <img th:src="${orderItem.imgUrl}" class = "rounded repImg" th:alt="${orderItem.itemNm}">
+                    <img th:src="${orderItem.imgUrl}" class="rounded repImg" th:alt="${orderItem.itemNm}">
                 </div>
                 <div class="align-self-center w-75">
                     <span th:text="${orderItem.itemNm}" class="fs24 font-weight-bold"></span>
@@ -146,8 +147,6 @@
                         <a th:href="${orderItem.imgUrl}" download="image.jpg">다운로드</a>
 
 
-
-
                     </div>
                 </div>
             </div>
@@ -155,7 +154,7 @@
         <br>
     </div>
 
-    <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})" >
+    <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})">
         <ul class="pagination justify-content-center" style="display: flex">
 
             <li class="page-item" th:classappend="${orders.number eq 0}?'disabled':''">
@@ -164,7 +163,8 @@
                 </a>
             </li>
 
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${orders.number eq page-1}?'active':''">
+            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}"
+                th:classappend="${orders.number eq page-1}?'active':''">
                 <a th:href="@{'/orders/' + ${page-1}}" th:inline="text" class="page-link">[[${page}]]</a>
             </li>
 
@@ -173,7 +173,6 @@
                     <span aria-hidden='true'>Next</span>
                 </a>
             </li>
-
 
 
         </ul>
