--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -18,10 +18,6 @@
     <!-- iamport.payment.js -->
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
-<<<<<<< HEAD
-
-=======
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
     <script>
 
         var IMP = window.IMP;
@@ -35,17 +31,11 @@
         var makeMerchantUid = hours +  minutes + seconds + milliseconds;
 
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
-
 
         function requestPay() {
 
             var loggedIn = true;
 
-<<<<<<< HEAD
             if (!loggedIn) {
                 alert("로그인 후 결제가 가능합니다.");
                 window.location.href = "/members/login"; // 로그인 페이지로 리다이렉트
@@ -73,37 +63,15 @@
                 });
 
             }
-=======
-
-            }, function (rsp) { // callback
-                if (rsp.success) {
-                    console.log(rsp);
-                    window.location.href = "/item/pay/{itemId}";
-                } else {
-                    console.log(rsp);
-                }
-            });
-
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         }
-
-
-
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
     </script>
 
     <script th:inline="javascript">
 
 
-<<<<<<< HEAD
         $(document).ready(function () {
             /* 페이지 로딩 시 실행되는 코드 */
             var initialHeartValue = /*[[${item.heart}]]*/ 0; // 초기 heart 값 가져오기
-=======
             $("#count").change( function(){
                 calculateToalPrice();
             });
@@ -167,10 +135,11 @@
 
         }
 
+
+
         $(document).ready(function () {
             /* 페이지 로딩 시 실행되는 코드 */
             var initialHeartValue = [[${heartCnt}]]; // 초기 heart 값 가져오기
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
             setHeartImage(initialHeartValue); // 초기 이미지 설정
 
         });
@@ -212,17 +181,10 @@
                 },
                 success: function (result, status) {
 
-<<<<<<< HEAD
-                    if(result == 0){
-                        alert("게시물 추천을 취소하였습니다.");
-                        $(".heartButton").attr("src","/banner/like empty.svg")
-                    }else if(result == 1){
-=======
                     if(!result){
                         alert("게시물 추천을 취소하였습니다.");
                         $(".heartButton").attr("src","/banner/like empty.svg")
                     }else{
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                         alert("게시물을 추천하였습니다.");
                         $(".heartButton").attr("src","/banner/like.svg")
 
@@ -240,13 +202,6 @@
                 }
             });
         }
-        function likeCount(){
-
-<<<<<<< HEAD
-=======
-        }
-
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         function addCart() {
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
@@ -272,11 +227,7 @@
                 cache: false,
                 success: function (result, status) {
                     alert("상품을 장바구니에 담았습니다.");
-<<<<<<< HEAD
-                    location.href = '/index';
-=======
                     location.href = '/cart';
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                 },
                 error: function (jqXHR, status, error) {
 
@@ -321,11 +272,6 @@
 <div layout:fragment="content">
 
     <input type="hidden" id="itemId" th:value="${item.id}">
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
     <div class="products">
         <div class="container">
             <div class="single-page">
@@ -359,7 +305,6 @@
 
                         <p class="single-price-text" th:text="${item.itemDetail}"></p>
 
-<<<<<<< HEAD
                         <!--                        <form action="#" method="post">-->
                         <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
                         <input type="hidden" name="cmd" value="_cart" />
@@ -368,25 +313,11 @@
                         <!--                            <input type="hidden" name="amount" value="540.00" />-->
                         <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
                         <!--                        </form>-->
-=======
-                        <form action="#" method="post">
-                            <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
-<!--                            <input type="hidden" name="cmd" value="_cart" />-->
-<!--                            <input type="hidden" name="add" value="1" />-->
-<!--                            <input type="hidden" name="w3ls1_item" value="Handbag" />-->
-<!--                            <input type="hidden" name="amount" value="540.00" />-->
-                            <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
-                        </form>
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
 
 
-                        <button class="w3ls-cart w3ls-cart-like" onclick="requestPay()">
+                        <button class="w3ls-cart w3ls-cart-like" onclick="requestPay()" sec:authorize="isAuthenticated()">
                             <i class="fa fa-heart-o" aria-hidden="true"></i>
                             다운로드
-<<<<<<< HEAD
-=======
-                            <!--                                </a>-->
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                         </button>
                     </div>
                     <div class="clearfix"> </div>
@@ -412,17 +343,13 @@
                     </div>
                     <!--					</div>-->
                     <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingTwo">
+                        <div class="panel-heading" role="tab" id="headingTwo" style="height: 50px;">
                             <h4 class="panel-title">
                                 <a class="collapsed pa_italic" style="padding: 12.8px 24px">
                                     <i class="fa fa-info-circle fa-icon" aria-hidden="true"></i> additional information <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
                                 </a>
                             </h4>
-<<<<<<< HEAD
-                            <button id="likeButton" th:attr="data-toggle=${item.heart}"  onclick="likeButton()">
-=======
-                            <button id="likeButton" th:attr="data-toggle=${heartCnt}"  onclick="likeButton()">
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
+                            <button id="likeButton" th:attr="data-toggle=${heartCnt}"  onclick="likeButton()" style="width: 5%;">
                                 <img class="heartButton " >
                                 <i id="likeIcon" class="fa fa-heart-o" aria-hidden="true" >좋아요</i>
                             </button>
@@ -433,41 +360,14 @@
                             </a>
                         </div>
                         <div>
-<<<<<<< HEAD
 
-=======
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
-                            <a>
-                                <span th:text="${item.hashtag}"></span>
-                            </a>
 
                         </div>
                         <div id="collapseTwo" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingTwo">
                             <div class="panel-body">
-                                귀여운, 캐릭터, 일러스트
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingThree">
-                            <h4 class="panel-title">
-                                <a class="collapsed pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <i class="fa fa-check-square-o fa-icon" aria-hidden="true"></i> reviews (5) <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
+                                <a>
+                                    <span th:text="${item.hashtag}"></span>
                                 </a>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingFour">
-                            <h4 class="panel-title">
-                                <a class="collapsed pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    <i class="fa fa-question-circle fa-icon" aria-hidden="true"></i> help <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
                         </div>
                     </div>
@@ -477,10 +377,4 @@
         </div>
     </div>
 </div>
-<<<<<<< HEAD
-=======
-
-</body>
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
-
 </html>
