--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -18,17 +18,12 @@
 
             var url = "/order/" + orderId + "/cancel";
             var paramData = {
-<<<<<<< HEAD
                 orderId: orderId,
-=======
-                orderId : orderId,
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
             };
 
             var param = JSON.stringify(paramData);
 
             $.ajax({
-<<<<<<< HEAD
                 url: url,
                 type: "POST",
                 contentType: "application/json",
@@ -48,27 +43,6 @@
                         alert('로그인 후 이용해주세요');
                         location.href = '/members/login';
                     } else {
-=======
-                url      : url,
-                type     : "POST",
-                contentType : "application/json",
-                data     : param,
-                beforeSend : function(xhr){
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                    xhr.setRequestHeader(header, token);
-                },
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
-                    alert("주문이 취소 되었습니다.");
-                    location.href='/orders/' + [[${page}]];
-                },
-                error : function(jqXHR, status, error){
-                    if(jqXHR.status == '401'){
-                        alert('로그인 후 이용해주세요');
-                        location.href='/members/login';
-                    } else{
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                         alert(jqXHR.responseText);
                     }
                 }
@@ -81,7 +55,6 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
-<<<<<<< HEAD
         .content-mg {
             margin-left: 30%;
             margin-right: 30%;
@@ -113,34 +86,6 @@
 
         .fs24 {
             font-size: 24px
-=======
-        .content-mg{
-            margin-left:30%;
-            margin-right:30%;
-            margin-top:2%;
-            margin-bottom:100px;
-        }
-        .repImgDiv{
-            margin-right:15px;
-            margin-left:15px;
-            height:auto;
-        }
-        .repImg{
-            height:100px;
-            width:100px;
-        }
-        .card{
-            /*width:750px;*/
-            height:100%;
-            padding:14px;
-            margin-bottom:20px;
-        }
-        .fs18{
-            font-size:18px
-        }
-        .fs24{
-            font-size:24px
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         }
 
         /* 체크박스 컨테이너 스타일 */
@@ -174,7 +119,6 @@
     </h2>
 
     <div th:each="order : ${orders.getContent()}">
-<<<<<<< HEAD
         <div class="d-flex mb-3 align-self-center">
             <h3 th:text="${order.orderDate} + ' 주문'"></h3>
             <!--            <div class="ml-3">-->
@@ -185,28 +129,11 @@
             <!--                    <h3>(취소 완료)</h3>-->
             <!--                </th:block>-->
             <!--            </div>-->
-=======
-
-        <div class="d-flex mb-3 align-self-center">
-            <h3 th:text="${order.orderDate} + ' 주문'"></h3>
-            <div class="ml-3">
-                <th:block th:if="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">
-                    <button type="button" class="btn btn-danger" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>
-                </th:block>
-                <th:block th:unless="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">
-                    <h3>(취소 완료)</h3>
-                </th:block>
-            </div>
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         </div>
         <div class="card d-flex">
             <div th:each="orderItem : ${order.orderItemDtoList}" class="d-flex mb-3">
                 <div class="repImgDiv">
-<<<<<<< HEAD
                     <img th:src="${orderItem.imgUrl}" class="rounded repImg" th:alt="${orderItem.itemNm}">
-=======
-                    <img th:src="${orderItem.imgUrl}" class = "rounded repImg" th:alt="${orderItem.itemNm}">
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                 </div>
                 <div class="align-self-center w-75">
                     <span th:text="${orderItem.itemNm}" class="fs24 font-weight-bold"></span>
@@ -214,15 +141,10 @@
                         <span th:text="${orderItem.orderPrice} +'원'"></span>
 
                         <span th:text="${orderItem.count} +'개'"></span>
-                        <br>
-                        <span th:text="${orderItem.count}*${orderItem.orderPrice} + '원'"></span>
+<!--                        <br>-->
+<!--                        <span th:text="${orderItem.count}*${orderItem.orderPrice} + '원'"></span>-->
 
-<<<<<<< HEAD
-                        <a th:href="${orderItem.imgUrl}" download="image.jpg">다운로드</a>
-
-
-=======
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
+                        <a th:href="${orderItem.imgUrl}" download="image.jpg" style="position: absolute; right: 5%;">다운로드</a>
                     </div>
                 </div>
             </div>
@@ -230,11 +152,7 @@
         <br>
     </div>
 
-<<<<<<< HEAD
     <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})">
-=======
-    <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})" >
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         <ul class="pagination justify-content-center" style="display: flex">
 
             <li class="page-item" th:classappend="${orders.number eq 0}?'disabled':''">
@@ -243,12 +161,8 @@
                 </a>
             </li>
 
-<<<<<<< HEAD
             <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}"
                 th:classappend="${orders.number eq page-1}?'active':''">
-=======
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${orders.number eq page-1}?'active':''">
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
                 <a th:href="@{'/orders/' + ${page-1}}" th:inline="text" class="page-link">[[${page}]]</a>
             </li>
 
@@ -257,11 +171,6 @@
                     <span aria-hidden='true'>Next</span>
                 </a>
             </li>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 9aed702ef7d67402c60ef3a5efbd9e4f8c4f8997
         </ul>
     </div>
 
